# dsb-project

./: docker-compose.yaml
admin/: .env  .env.examples  .gitignore  Dockerfile  manage.py  pyproject.toml
admin/bot/: admin.py  models.py
admin/bot/migrations/: 0001_initial.py
admin/config/: asgi.py  settings.py  urls.py
admin/services/: admin.py  models.py
admin/services/migrations/: 0001_initial.py
admin/tickets/: admin.py  models.py
admin/tickets/migrations/: 0001_initial.py
admin/users/: admin.py  models.py
admin/users/management/commands/: add_superuser.py
admin/users/migrations/: 0001_initial.py
bot-app/: .env  .env.examples  .gitignore  Dockerfile  main.py  pyproject.toml
bot-app/config/: base.py  db.py  settings.py
bot-app/models/: bot.py  models_bot.py  services.py  tickets.py  users.py
